force-app/main/default/objects/Equipment__c/Equipment__c.object-meta.xml
<CustomObject>
    <description>ציוד קשר</description>
    <label>ציוד קשר</label>
    <nameField>
        <label>Equipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ציוד קשר</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>