force-app/main/default/objects/Equipment__c/fields/Current_Holder__c.field-meta.xml
<CustomField>
    <fullName>Current_Holder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>נמצא אצל / חייל חתום</inlineHelpText>
    <label>Current Holder</label>
    <referenceTo>Soldier__c</referenceTo>
    <relationshipLabel>Signed soldiers</relationshipLabel>
    <relationshipName>Signed_Soldier</relationshipName>
    <type>Lookup</type>
</CustomField>