force-app/main/default/objects/Equipment__c/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <inlineHelpText>מיקום נוכחי</inlineHelpText>
    <label>Current Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>