force-app/main/default/objects/Equipment__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>מספר צ צבאי</description>
    <inlineHelpText>מספר צ צבאי</inlineHelpText>
    <label>Serial Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>