force-app/main/default/objects/Equipment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>סטטוס נוכחי</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ביטחונית</fullName>
            </value>
            <value>
                <fullName>לחימה</fullName>
            </value>
            <value>
                <fullName>חייל חתום</fullName>
            </value>
            <value>
                <fullName>מחלקת קשר</fullName>
            </value>
            <value>
                <fullName>זוכה</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>