force-app/main/default/objects/Equipment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>מ.ק 710</fullName>
            </value>
            <value>
                <fullName>אולר</fullName>
            </value>
            <value>
                <fullName>משיב כחול</fullName>
            </value>
            <value>
                <fullName>מגן מכלול</fullName>
            </value>
            <value>
                <fullName>נר הלילה</fullName>
            </value>
            <value>
                <fullName>טלפון אדום</fullName>
            </value>
            <value>
                <fullName>אמר&quot;ל</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>